--- a/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
+++ b/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
@@ -532,7 +532,7 @@
                 <!-- Enhanced Filter Section -->
                 <div class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 px-2 py-2 bg-gray-50 rounded shadow-sm w-full">
                     <!-- Customer Name Dropdown Filter -->
-                    <div class="relative flex-grow">
+                    <!-- <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Customer</label>
                         <select [(ngModel)]="teamCustomerFilter" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
@@ -541,10 +541,24 @@
                                 {{ customer.customer_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+
+                    <div class="relative flex-grow">
+                        <label class="block text-xs font-medium mb-1">Customer</label>
+                        <ng-select [(ngModel)]="teamCustomerFilter"
+                                  (change)="applyTeamFilters()"
+                                  class="text-xs custom-ng-select-filter"
+                                  [clearable]="true"
+                                  [searchable]="true">
+                          <ng-option [value]="">All Customers</ng-option>
+                          <ng-option *ngFor="let customer of optionCustomers" [value]="customer.customer_name">
+                            {{ customer.customer_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
     
                     <!-- Project Name Dropdown Filter -->
-                    <div class="relative flex-grow">
+                    <!-- <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Project</label>
                         <select [(ngModel)]="teamProjectFilter" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
@@ -553,10 +567,23 @@
                                 {{ project.project_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+                    <div class="relative flex-grow">
+                        <label class="block text-xs font-medium mb-1">Project</label>
+                        <ng-select [(ngModel)]="teamProjectFilter"
+                                  (change)="applyTeamFilters()"
+                                  class="text-xs custom-ng-select-filter"
+                                  [clearable]="true"
+                                  [searchable]="true">
+                          <ng-option [value]="">All Projects</ng-option>
+                          <ng-option *ngFor="let project of optionProject" [value]="project.project_name">
+                            {{ project.project_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
     
                     <!-- Project Manager Dropdown Filter -->
-                    <div class="relative flex-grow">
+                    <!-- <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Project Manager</label>
                         <select [(ngModel)]="teamManagerFilter" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
@@ -566,10 +593,25 @@
                                 {{ manager.user_first_name }} {{ manager.user_last_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+                    <div class="relative flex-grow">
+                        <label class="block text-xs font-medium mb-1">Project Manager</label>
+                        <ng-select [(ngModel)]="teamManagerFilter"
+                                  (change)="applyTeamFilters()"
+                                  class="text-xs custom-ng-select-filter"
+                                  [clearable]="true"
+                                  [searchable]="true">
+                          <ng-option [value]="">All Managers</ng-option>
+                          <ng-option *ngFor="let manager of optionProjectManagers" 
+                                    [value]="manager.user_first_name + ' ' + manager.user_last_name">
+                            {{ manager.user_first_name }} {{ manager.user_last_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
+                  
     
                     <!-- Employee Name Dropdown Filter -->
-                    <div class="relative flex-grow">
+                    <!-- <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Employee</label>
                         <select [(ngModel)]="teamEmployeeFilter" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
@@ -579,10 +621,24 @@
                                 {{ user.user_first_name }} {{ user.user_last_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+                    <div class="relative flex-grow">
+                        <label class="block text-xs font-medium mb-1">Employee</label>
+                        <ng-select [(ngModel)]="teamEmployeeFilter"
+                                  (change)="applyTeamFilters()"
+                                  class="text-xs custom-ng-select-filter"
+                                  [clearable]="true"
+                                  [searchable]="true">
+                          <ng-option [value]="">All Employees</ng-option>
+                          <ng-option *ngFor="let user of optionUsers" 
+                                    [value]="user.user_first_name + ' ' + user.user_last_name">
+                            {{ user.user_first_name }} {{ user.user_last_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
     
                     <!-- Project Role Dropdown Filter -->
-                    <div class="relative flex-grow">
+                    <!-- <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Project Role</label>
                         <select [(ngModel)]="teamRoleFilter" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
@@ -591,10 +647,24 @@
                                 {{ role.project_role_name }}
                             </option>
                         </select>
-                    </div>
+                    </div> -->
+
+                    <div class="relative flex-grow">
+                        <label class="block text-xs font-medium mb-1">Project Role</label>
+                        <ng-select [(ngModel)]="teamRoleFilter"
+                                  (change)="applyTeamFilters()"
+                                  class="text-xs custom-ng-select-filter"
+                                  [clearable]="true"
+                                  [searchable]="true">
+                          <ng-option [value]="">All Roles</ng-option>
+                          <ng-option *ngFor="let role of optionProjectRole" [value]="role.project_role_name">
+                            {{ role.project_role_name }}
+                          </ng-option>
+                        </ng-select>
+                      </div>
     
                     <!-- Allocation Status Dropdown Filter -->
-                    <div class="relative flex-grow">
+                    <!-- <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Allocation Status</label>
                         <select [(ngModel)]="teamAllocationStatusFilter" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
@@ -602,10 +672,22 @@
                             <option value="true">Active</option>
                             <option value="false">Inactive</option>
                         </select>
-                    </div>
+                    </div> -->
+                    <div class="relative flex-grow">
+                        <label class="block text-xs font-medium mb-1">Allocation Status</label>
+                        <ng-select [(ngModel)]="teamAllocationStatusFilter"
+                                  (change)="applyTeamFilters()"
+                                  class="text-xs custom-ng-select-filter"
+                                  [clearable]="true">
+                          <ng-option [value]="null">All Statuses</ng-option>
+                          <ng-option [value]="true">Active</ng-option>
+                          <ng-option [value]="false">Inactive</ng-option>
+                        </ng-select>
+                      </div>
+                  
     
                     <!-- Billed Status Dropdown Filter -->
-                    <div class="relative flex-grow">
+                    <!-- <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Billed Status</label>
                         <select [(ngModel)]="teamBilledStatusFilter" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
@@ -613,7 +695,19 @@
                             <option value="true">Billed</option>
                             <option value="false">Not Billed</option>
                         </select>
-                    </div>
+                    </div> -->
+                    <div class="relative flex-grow">
+                        <label class="block text-xs font-medium mb-1">Billed Status</label>
+                        <ng-select [(ngModel)]="teamBilledStatusFilter"
+                                  (change)="applyTeamFilters()"
+                                  class="text-xs custom-ng-select-filter"
+                                  [clearable]="true">
+                          <ng-option [value]="">All Statuses</ng-option>
+                          <ng-option [value]="true">Billed</ng-option>
+                          <ng-option [value]="false">Not Billed</ng-option>
+                        </ng-select>
+                      </div>
+                  
     
                     <!-- Date Range Filters -->
                     <div class="relative flex-grow">
@@ -624,7 +718,7 @@
     
                     <div class="relative flex-grow">
                         <label class="block text-xs font-medium mb-1">Start Date To</label>
-                        <input type="date" [(ngModel)]="teamStartDateTo" (change)="applyTeamFilters()"
+                        <input type="date" [(ngModel)]="teamEndDateTo" (change)="applyTeamFilters()"
                             class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300">
                     </div>
     
